# ScreenShot

advanced_clipboard/: CMakeLists.txt  ShotWidget.cpp  ShotWidget.h  Widget.cpp  Widget.h
lesson_10/: CMakeLists.txt  ScreenWidget.cpp  ScreenWidget.h  WIdget.h  Widget.cpp  notebook.txt
lesson_7/: CMakeLists.txt  main.cpp  note.rtf
lesson_9/: CMakeLists.txt  WIdget.h  Widget.cpp  main.cpp
